--- a/references.bib
+++ b/references.bib
@@ -1708,3 +1708,41 @@ doi = {10.1201/9781420072884-c30}
   year={1982},
   publisher={Oxford University Press}
 }
+
+@article{lindgren2011explicit,
+  title={An explicit link between Gaussian fields and Gaussian Markov random fields: the stochastic partial differential equation approach},
+  author={Lindgren, Finn and Rue, H{\aa}vard and Lindstr{\"o}m, Johan},
+  journal={Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  volume={73},
+  number={4},
+  pages={423--498},
+  year={2011},
+  publisher={Oxford University Press}
+}
+
+@article{martino2009implementing,
+  title={Implementing approximate Bayesian inference using Integrated Nested Laplace Approximation: A manual for the inla program},
+  author={Martino, Sara and Rue, H{\aa}vard},
+  journal={Department of Mathematical Sciences, NTNU, Norway},
+  year={2009},
+  publisher={Citeseer}
+}
+
+@techreport{rue2001gmrflib,
+  title={GMRFLib: a C-library for fast and exact simulation of Gaussian Markov random fields},
+  author={Rue, H{\aa}vard and Follestad, Turid},
+  year={2001},
+  institution={SIS-2002-236}
+}
+
+@article{bachl2019inlabru,
+  title={inlabru: an R package for Bayesian spatial modelling from ecological survey data},
+  author={Bachl, Fabian E and Lindgren, Finn and Borchers, David L and Illian, Janine B},
+  journal={Methods in Ecology and Evolution},
+  volume={10},
+  number={6},
+  pages={760--766},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
